new proj/src/objects/GE_SM_PW_PGS_Tech_Account_Restricted__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Installed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Rig that the technician is restricted from.</description>
        <inlineHelpText>This is the Rig that the technician is restricted from.</inlineHelpText>
        <label>Installed Products</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Technician Account Restricted</relationshipLabel>
        <relationshipName>Technician_Account_Restricted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the location the Technician is restricted from.</description>
        <inlineHelpText>This is the location the Technician is restricted from.</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Technician Account Restricted</relationshipLabel>
        <relationshipName>Technician_Account_Restricted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_PGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Site Account where the technician is not suppose to return (ServiceMax)</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Technician_Account_Blackouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_PGS_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_PGS_Installed_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Installed Base the technician is not suppose to return to, if not for that whole site. (ServiceMax)</description>
        <label>Installed Base</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipName>Technician_Account_Blackouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_PGS_Technician_Equipment__c</fullName>
        <description>The Technician designated to not return to the associated Account Site or Installed Base</description>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Technician_Account_Blackouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Technician Account Restricted</label>
    <nameField>
        <displayFormat>TAB-{0000000000}</displayFormat>
        <label>Technician Account Restricted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Account Restricted</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>